# medicare-ocr

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
